// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Code empty 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-1xyzjvr=""
  >
    before|
    |after
  </p>
</div>
`;

exports[`Storyshots Code ends single line 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-1xyzjvr=""
  >
    This is where we see 
    <code
      data-css-exlif5=""
    >
      inline code
    </code>
  </p>
</div>
`;

exports[`Storyshots Code lead single line 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-1xyzjvr=""
  >
    <code
      data-css-exlif5=""
    >
      inline code
    </code>
     that is here
  </p>
</div>
`;

exports[`Storyshots Code line wrap 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-1xyzjvr=""
  >
    text at the start
    <code
      data-css-exlif5=""
    >
      buy-in programmatically, or out of the loop. I'll book a meeting so we can solution this before the sprint is over get buy-in, and closing these latest prospects is like putting socks on an octopus. Knowledge is power
    </code>
    text on the end
  </p>
</div>
`;

exports[`Storyshots Code maintains whitespace 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <code
    data-css-exlif5=""
  >
     in the middle 
  </code>
</div>
`;

exports[`Storyshots Code middle of paragraph 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-1xyzjvr=""
  >
    Please advise soonest streamline data-point, and execute , price point. This is not the hill i want to die on going forward. Diversify kpis not the long pole in my tent. Synergize productive mindfulness can you send me an invite? nor high-level so back of the net vertical integration. Deliverables 
    <code
      data-css-exlif5=""
    >
      inline code
    </code>
     granularity minimize backwards overflow. Baseline locked and loaded, and locked and loaded. Get buy-in programmatically, or out of the loop. I'll book a meeting so we can solution this before the sprint is over get buy-in, and closing these latest prospects is like putting socks on an octopus. Knowledge is power bake it in but take five, punch the tree, and come back in here with a clear head.
  </p>
</div>
`;

exports[`Storyshots Code standalone 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <code
    data-css-exlif5=""
  >
    inline code
  </code>
</div>
`;

exports[`Storyshots Heading className override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h2
    className="css-mbiza7"
    data-css-12103dp=""
  >
    orange
  </h2>
</div>
`;

exports[`Storyshots Heading color: primary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-12103dp=""
  >
    Primary
  </h1>
</div>
`;

exports[`Storyshots Heading color: secondary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-bnzoj7=""
  >
    Secondary
  </h1>
</div>
`;

exports[`Storyshots Heading size: large 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-12103dp=""
  >
    large
  </h1>
</div>
`;

exports[`Storyshots Heading size: medium 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-9zvq8n=""
  >
    medium
  </h1>
</div>
`;

exports[`Storyshots Heading size: small 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-1kf2x8b=""
  >
    small
  </h1>
</div>
`;

exports[`Storyshots Heading size: xLarge 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-f6nlcp=""
  >
    xLarge
  </h1>
</div>
`;

exports[`Storyshots Heading size: xSmall 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-v25gd5=""
  >
    xSmall
  </h1>
</div>
`;

exports[`Storyshots Heading style override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h2
    data-css-12103dp=""
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    pink
  </h2>
</div>
`;

exports[`Storyshots Label caps & strong: true 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-19iiq6r=""
  >
    Caps
  </span>
</div>
`;

exports[`Storyshots Label caps: true 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-1sp6jud=""
  >
    Caps
  </span>
</div>
`;

exports[`Storyshots Label className override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    className="css-mbiza7"
    data-css-e9bpt1=""
  >
    blue
  </span>
</div>
`;

exports[`Storyshots Label color: primary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-e9bpt1=""
  >
    Primary
  </span>
</div>
`;

exports[`Storyshots Label color: secondary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-rwxz6j=""
  >
    Secondary
  </span>
</div>
`;

exports[`Storyshots Label size: large 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-18jb6r7=""
  >
    large
  </span>
</div>
`;

exports[`Storyshots Label size: normal 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-e9bpt1=""
  >
    normal
  </span>
</div>
`;

exports[`Storyshots Label size: small 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-1cjjkrz=""
  >
    small
  </span>
</div>
`;

exports[`Storyshots Label size: xSmall 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-6xzxlg=""
  >
    xSmall
  </span>
</div>
`;

exports[`Storyshots Label strong: true 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-19x6xyn=""
  >
    Strong
  </span>
</div>
`;

exports[`Storyshots Label style override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-e9bpt1=""
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    pink
  </span>
</div>
`;

exports[`Storyshots List mixed list 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div>
    <ul
      data-css-bhv8ao=""
    >
      <li>
        aone
      </li>
      <li>
        two
      </li>
      <li>
        <ol
          data-css-fytatr=""
        >
          <li>
            one
          </li>
          <li>
            two
          </li>
          <li>
            three
          </li>
          <li>
            <ul
              data-css-p6hwrs=""
            >
              <li>
                one
              </li>
              <li>
                two
              </li>
              <li>
                three
              </li>
              <li>
                four
              </li>
              <li>
                five
              </li>
            </ul>
          </li>
          <li>
            five
          </li>
        </ol>
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
    <ul
      data-css-p6hwrs=""
      style={
        Object {
          "marginTop": 50,
        }
      }
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        <ul
          data-css-bhv8ao=""
        >
          <li>
            one
          </li>
          <li>
            two
          </li>
          <li>
            <ol
              data-css-fytatr=""
            >
              <li>
                one
              </li>
              <li>
                two
              </li>
              <li>
                three
              </li>
              <li>
                four
              </li>
              <li>
                five
              </li>
            </ol>
          </li>
          <li>
            four
          </li>
          <li>
            five
          </li>
        </ul>
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List type: bulleted 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ul
    data-css-bhv8ao=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots List type: default 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ul
    data-css-p6hwrs=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots List type: numbered 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ol
    data-css-fytatr=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ol>
</div>
`;

exports[`Storyshots P className override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    className="css-mbiza7"
    data-css-1xyzjvr=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P color: primary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-1xyzjvr=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P color: secondary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-1vhod6k=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P size: large 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-16knash=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P size: normal 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-1xyzjvr=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P size: small 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-16fryvu=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P style override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-1xyzjvr=""
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;
